the abundance of Breakpoint data that the Morpher can 
generate.

- improved scripting interface to take advantage of 
new capabilities of SWIG, including support for C++
STL vectors. SampleVector is now just a DoubleVector,
and it acts like a list in the native language, instead
of having its own idiosyncratic behavior. THIS BREAKS
OLD CODE.

- improved phase accuracy of synthesis.

-------------------------------------------------------
changes since 1.1 release:

- added rewritten AiffFile and SpcFile classes, with 
interfaces that allow Partials to be added directly
and automatically rendered, and that include access
to Aiff-style Markers (time-string pairs, represented
by the new class Marker).

- added rewritten SdifFile classes that look and
feel like the AiffFile and SpcFile classes, and
support Markers, and no longer use the IRCAM
SDIF library. 

- Tcl module is no longer built by default, only the 
Python module.

- added AiffFile Marker access to scripting module.

- added sampleVector_fill to procedural interface, and
to its documentation.

- removed depdendency on the IRCAM SDIF library.

- added capability to build the Loris Csound generators
as a dynamically-loaded module, on platforms that support
them. (Cannot seem to get them to work under OS X.)

- added FFTW3 compatibilty, version detected at configure 
time.

- added utilities directory, including a program for spewing markers
(loris_spewmarkers) and another for performing Loris analysis
(loris_analyze).

-------------------------------------------------------
changes since 1.0.2 release:

- added window sidelobeLevel parameter to Analyzer, 
decoupled it from the amplitude floor.

- bandwidth (noise) association can now be disabled in 
Analyzer by setting bwRegionWidth to 0.

- softened amplitude floor in Analyzer, now amplitudes 
near (within 10dB) of the amplitude floor are faded out,
instead of suddenly being eliminated at the threshold.
